--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "gtkspellmm-3.0.1.tar.gz": d1094b52201cebf0356f6651023657bbc8dfd090
+  gtkspellmm-3.0.4.tar.gz: 7846e0f271f24baaac72d43d7a48aeb87cc4edae
