--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  gtkspellmm-3.0.4.tar.gz: 7846e0f271f24baaac72d43d7a48aeb87cc4edae
+  gtkspellmm-3.0.5.tar.xz: a4e0dea595575ad428ae051df4587a13bfc9eba4
